// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxModalHeader customize 1`] = `
<div>
  <div
    class="modal-header bazinga"
  >
    Test
    <button
      aria-label="Close"
      class="close-button"
    />
  </div>
</div>
`;

exports[`loads and displays CxModalHeader component 1`] = `
<div>
  <div
    class="modal-header"
  >
    Test
    <button
      aria-label="Close"
      class="close-button"
    />
  </div>
</div>
`;
